day4/workshop/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
        project: workshop
    spec:
      containers:
      - name: mongo
        image: mongo
        resources: {}
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongo-pvc
      restartPolicy: Always
