day4/workshop/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        project: workshop
    spec:
      containers:
      - name: web
        image: krajewskim/frontend
        resources: {}
        ports:
        - containerPort: 3000
          name: web
